orderservice/orderservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: demo
  name: orderservice-service
  labels:
    type: spring-boot
spec:
  ports:
    - name: "http"
      port: 8081
      targetPort: 8081
  selector:
    app: orderservice
